Added check for auth with API email & key Added create API user API key Updated swagger docs
