# api/docs/swagger.json
@@ -28,7 +28,7 @@
                 "summary": "Home",
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Welcome to the skils API!",
                         "schema": {
                             "type": "string"
                         }
@@ -1004,6 +1004,58 @@
                 }
             }
         },
+        "/user/api_key": {
+            "post": {
+                "description": "Create a new API Key",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Create a new API Key",
+                "parameters": [
+                    {
+                        "description": "Create API Key JSON object that needs to be created",
+                        "name": "apiKeyRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.NewAPIKeyRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ResponseResult-array_models_UserAPIKey"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/version": {
             "get": {
                 "description": "Version route",
@@ -1255,6 +1307,23 @@
                 }
             }
         },
+        "handlers.ResponseResult-array_models_UserAPIKey": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.UserAPIKey"
+                    }
+                },
+                "message": {
+                    "type": "string"
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
         "handlers.ResponseResult-models_Category": {
             "type": "object",
             "properties": {
@@ -1376,6 +1445,20 @@
                 }
             }
         },
+        "models.NewAPIKeyRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "expires_on": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Person": {
             "type": "object",
             "properties": {
@@ -1421,6 +1504,20 @@
                 },
                 "short_key": {
                     "type": "string"
+                }
+            }
+        },
+        "models.UserAPIKey": {
+            "type": "object",
+            "properties": {
+                "expires_on": {
+                    "type": "string"
+                },
+                "key": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
                 }
             }
         }
